--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,8 @@ DerivedData
 # you should judge for yourself, the pros and cons are mentioned at:
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
-Pods/
-
+SampleNotifcations/Pods/
+SampleNotifcations/Podfile.lock
 
 ### Xcode ###
 build/
@@ -89,4 +89,5 @@ DerivedData
 
 ### Original Images Testing Purpose ###
 test-images/
+
 *.orig
