--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,15 @@ DerivedData
 SampleNotifcations/Pods/
 SampleNotifcations/Podfile.lock
 
+# CocoaPods
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
+#
+GTNotificationProjectForTestingTheIntegration/Pods/
+GTNotificationProjectForTestingTheIntegration/Podfile.lock
+
 ### Xcode ###
 build/
 *.pbxuser
