--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,6 @@ script:
 notifications:
   email: false
 
-before_install:
-  - brew update
-  - brew uninstall xctool && brew install --HEAD xctool
+#before_install:
+#  - brew update
+#  - brew uninstall xctool && brew install --HEAD xctool
